; ModuleID = '/home/carl/AnghaBench/mruby/src/extr_dump.c_get_irep_record_size_1.c'
source_filename = "/home/carl/AnghaBench/mruby/src/extr_dump.c_get_irep_record_size_1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*, i32*)* @get_irep_record_size_1 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @get_irep_record_size_1(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  store i64 0, i64* %5, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = call i64 @get_irep_header_size(i32* %6)
  %8 = load i64, i64* %5, align 8
  %9 = add i64 %8, %7
  store i64 %9, i64* %5, align 8
  %10 = load i32*, i32** %3, align 8
  %11 = load i32*, i32** %4, align 8
  %12 = call i64 @get_iseq_block_size(i32* %10, i32* %11)
  %13 = load i64, i64* %5, align 8
  %14 = add i64 %13, %12
  store i64 %14, i64* %5, align 8
  %15 = load i32*, i32** %3, align 8
  %16 = load i32*, i32** %4, align 8
  %17 = call i64 @get_pool_block_size(i32* %15, i32* %16)
  %18 = load i64, i64* %5, align 8
  %19 = add i64 %18, %17
  store i64 %19, i64* %5, align 8
  %20 = load i32*, i32** %3, align 8
  %21 = load i32*, i32** %4, align 8
  %22 = call i64 @get_syms_block_size(i32* %20, i32* %21)
  %23 = load i64, i64* %5, align 8
  %24 = add i64 %23, %22
  store i64 %24, i64* %5, align 8
  %25 = load i64, i64* %5, align 8
  ret i64 %25
}

declare dso_local i64 @get_irep_header_size(i32*) #1

declare dso_local i64 @get_iseq_block_size(i32*, i32*) #1

declare dso_local i64 @get_pool_block_size(i32*, i32*) #1

declare dso_local i64 @get_syms_block_size(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
